--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 	<!-- banner上结束 -->
 	<!-- banner下开始 -->
 	<div class="bannerxia">
-		<div class="bannerxiahaonianhuo">
+		<!-- <div class="bannerxiahaonianhuo">
 			<img src="img/bdi1_02.png" alt="">
-		</div>
+		</div> -->
 		
 		<div class="bannerxiadi">
 			<div class="bannerxia1">
@@ -586,9 +586,9 @@
 
 
 		</div>
-		<div class="bannerxiasongdaojia">
+		<!-- <div class="bannerxiasongdaojia">
 			<img src="img/bdi2.png" alt="">
-		</div>
+		</div> -->
 		
 	</div>
 	<!-- banner下结束 -->
@@ -3916,7 +3916,7 @@
 			</div>
 			<div class="cai_footer">
 				<span class="cai_footer_shuxian1"></span>
-				END
+				<p>END</p>
 				<span class="cai_footer_shuxian2"></span>
 			</div>
 		</div>
@@ -4043,9 +4043,77 @@
 				</div>	 -->
 			</div>
 		</div>
+		<div class="zhandian_xia">
+			<div class="zhandian_xia_content">
+				<div class="zhandian_xia1">
+					<a href="" class="zhandian_xia_content1_wenzi">苏宁互联</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">苏宁金融</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">苏宁支付</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">PPTV</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">红孩子</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">苏宁物流</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">手机苏宁</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">苏宁酒店</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">知识产权举报</a>
+				</div>
+				<div class="zhandian_xia1 zhandian_xia2">
+					<a href="" class="zhandian_xia_content1_wenzi">联系我们</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">诚聘英才</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">供应商入驻</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">广告平台</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">苏宁联盟</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">苏宁招标</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">友情链接</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">法律申明</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">用户体验提升计划</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi">股东会员认证</a>
+				</div>
+				<div class="zhandian_xia1 zhandian_xia3">
+					<a href="" class="zhandian_xia_content1_wenzi1">Copyright&#xe618;2002-2018,苏宁云商集团股份有限公司版权所有</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi1">&#xe644;苏公网安备32010202010078号</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi1">苏ICP备10207551号-4</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi1">苏B1-20130131</a>	
+				</div>
+				<div class="zhandian_xia1 zhandian_xia4">
+					<a href="" class="zhandian_xia_content1_wenzi1">苏B2-20130376</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi1">&#xe644;苏B2-20130391出版物经营许可证新出发苏批字第A-234号</a>
+					<div class="zhandian_xia_content1_shuxian"></div>
+					<a href="" class="zhandian_xia_content1_wenzi1">互联网药品信息服务资格证书（书）-非经营性-2016-0005</a>
+				</div>
+				<div class="zhandian_xia1 zhandian_xia5">
+					<a href="" class="zhandian_xia_content1_wenzi1">本网站直接或间接向消费者推销产品或者服务的商业宣传均属于“广告”（包装及参数、售后保障等商品信息除外）</a>
+				</div>
+				<div class="zhandian_xia_content1_image">
+					<img src="img/a.zdx1-1.png" alt="" class="zhandian_xia_content1_image1">
+					<img src="img/a.zdx1-2.png" alt="" class="zhandian_xia_content1_image1">
+					<img src="img/a.zdx1-3.jpg" alt="" class="zhandian_xia_content1_image1">
+					<img src="img/a.zdx1-4.png" alt="">
+				</div>
 
+			</div>
+		</div>
 	</div>
-		<!-- </div> -->
-	<!-- </div>	 -->
+
 </body>
 </html>
